Adjust some texts, drop Source page

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -28,7 +28,7 @@
         To get the latest Bash one-liners,
         follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
         If you find any problems,
-        <a href="https://github.com/janosgyerik/bashoneliners/issues">report a bug on GitHub</a>.
+        <a href="https://github.com/janosgyerik/bashoneliners/issues">please report on GitHub Issues</a>.
     </div>
 
     {% include 'oneliners/elements/warnings/relink.html' %}
