--- a/oneliners/templates/oneliners/pages/oneliner_edit.html
+++ b/oneliners/templates/oneliners/pages/oneliner_edit.html
@@ -29,10 +29,10 @@
             linked together.
         </li>
         <li>Please post only non-trivial, practical one-liners that are actually useful for something in real life, and
-            in not too extreme, limited situations. Pure awesome wicked-cool one-liners are OK too.
+            in not too limited situations. Pure awesome wicked-cool one-liners are OK too.
         </li>
         <li>The <strong>Explanation</strong> is very important. The purpose of this site is to teach, not to show off.
-            Please write nicely, explain clearly, as if teaching a trick to your friend.
+            Please write nicely, explain clearly, as if teaching a trick to a friend.
         </li>
     </ul>
 
