--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -8,7 +8,7 @@
         <a href="http://bashoneliners.com/" class="btn btn-success pull-right">bashoneliners.com</a>
     {% endif %}
     {% if SERVER_NAME != 'beta.bashoneliners.com' and user.is_superuser %}
-        <a href="http://beta.bashoneliners.com/" class="btn btn-info pull-right">Try the BETA site</a>
+        <a href="http://beta.bashoneliners.com/" class="btn btn-info pull-right">beta</a>
     {% endif %}
 {% endblock %}
 
