--- a/oneliners/templates/oneliners/elements/oneliners_nav.html
+++ b/oneliners/templates/oneliners/elements/oneliners_nav.html
@@ -5,6 +5,9 @@
     <li class="{{ active_popular }}">
         <a href="{% url 'oneliners_popular' %}" data-ordering="popular">Popular</a>
     </li>
+    <li class="{{ active_active }}">
+        <a href="{% url 'oneliners_active' %}" data-ordering="active">Active</a>
+    </li>
     <li class="{{ active_newest }}">
         <a href="{% url 'oneliners_newest' %}" data-ordering="newest">Newest</a>
     </li>
