--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -21,15 +21,18 @@
 
 {% block content %}
 
-    <div class="alert alert-block alert-info">
-        We collect practical,
-        well-explained Bash one-liners,
-        and promote best practices in Bash shell scripting.
-        To get the latest Bash one-liners,
-        follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
-        If you find any problems,
-        <a href="https://github.com/janosgyerik/bashoneliners/issues">please report on GitHub Issues</a>.
-    </div>
+Welcome to bashoneliners.com,
+a growing collection of practical and well-explained Bash tips and tricks.
+We are committed to review every contributed one-liner to ensure its high quality,
+practical usefulness, and a solid explanation of how it works.
+We want to document one-liners for frequent (non-trivial) tasks executed in the shell,
+written in the best possible way, following good practices known in the industry.
+
+To get the latest Bash one-liners,
+follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
+
+If you find any problems,
+<a href="https://github.com/janosgyerik/bashoneliners/issues">please report on GitHub Issues</a>.
 
     {% include 'oneliners/elements/warnings/relink.html' %}
 
