Remove links to unused google groups mailing list

--- a/oneliners/templates/404.html
+++ b/oneliners/templates/404.html
@@ -12,9 +12,7 @@
         <p>Path: <strong>{{ request_path }}</strong></p>
 
         <p>If you think this is some kind of error,
-            please drop us an email at
-            <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a>,
-            along with anything you might have done that may have caused the error.
+            please create an issue on <a href="https://github.com/janosgyerik/bashoneliners/issues">GitHub</a>.
         </p>
     </div>
 
