--- a/oneliners/templates/internal_error.html
+++ b/oneliners/templates/internal_error.html
@@ -44,8 +44,8 @@
             so that we don't need to worry about petty hosting bills...</p>
 
         <p>If you need more info or explanation,
-            you can get in touch with us here:
-            <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a></p>
+            you can get in touch with us at
+            <a href="mailto:info@bashoneliners.com">info@bashoneliners.com</a></p>
 
         <p>And now, to continue whatever you were doing,
             try to simply reload the page,
