Do not mention automatic tweeting on Post form

--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -62,8 +62,7 @@
 
         <h3>Published</h3>
 
-        <div class="help-block">If checked, the one-liner will be visible in public listings, and will be tweeted on
-            Twitter with <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a></div>
+        <div class="help-block">If checked, the one-liner will be visible in public listings.</div>
         <div class="input">
             <div class="error">{{ form.is_published.errors }}</div>
             <div class="is_published"><label class="checkbox">{{ form.is_published }} <span>Published</span></label>
