Make it easy for staff to manually tweet / see status

--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -65,6 +65,7 @@
 
                         {% if user.is_staff and user != oneliner.user %}
                             <a class="btn btn-danger" href="{% url 'oneliner_edit' oneliner.pk %}">Edit</a>
+                            <a class="btn btn-{% if not oneliner.was_tweeted %}danger{% else %}warning{% endif %}" href="{% url 'oneliner_tweet' oneliner.pk %}">Tweet</a>
                         {% endif %}
                     {% endif %}
 
