--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -29,7 +29,7 @@ We want to document one-liners for frequent (non-trivial) tasks executed in the 
 written in the best possible way, following good practices known in the industry.
 
 To get the latest Bash one-liners,
-follow <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
+follow <a href="https://twitter.com/bashoneliners">@bashoneliners</a> on Twitter.
 
 If you find any problems,
 <a href="https://github.com/janosgyerik/bashoneliners/issues">please report on GitHub Issues</a>.
