--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -5,10 +5,10 @@
 {% block pageheader %}
     bashoneliners.com
     {% if SERVER_NAME != 'www.bashoneliners.com' %}
-        <a href="http://bashoneliners.com/" class="btn btn-success pull-right">bashoneliners.com</a>
+        <a href="https://bashoneliners.com/" class="btn btn-success pull-right">bashoneliners.com</a>
     {% endif %}
     {% if SERVER_NAME != 'beta.bashoneliners.com' and user.is_superuser %}
-        <a href="http://beta.bashoneliners.com/" class="btn btn-info pull-right">beta</a>
+        <a href="https://beta.bashoneliners.com/" class="btn btn-info pull-right">beta</a>
     {% endif %}
 {% endblock %}
 
