Upgrade to Django 4.2.4, and all other dependencies too

--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "html5.html" %}
 
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}{% block pagetitle %}{% endblock %} | Bash One-Liners{% endblock %}
 
