--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -66,6 +66,7 @@
                         {% if user.is_staff %}
                             <a class="btn btn-danger" href="{% url 'oneliner_edit' oneliner.pk %}">Edit</a>
                             <a class="btn btn-{% if not oneliner.was_tweeted %}danger{% else %}warning{% endif %}" href="{% url 'oneliner_tweet' oneliner.pk %}">Tweet</a>
+                            <a class="btn btn-{% if not oneliner.unpublished %}danger{% else %}warning{% endif %}" href="{% url 'oneliner_unpublish' oneliner.pk %}">Unpublish</a>
                         {% endif %}
                     {% endif %}
 
