Improve intro text and site description

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -15,18 +15,29 @@
 {% block keywords %}bash, ksh, shell, script, one-liner, oneliner, tips, tricks, snippets, linux, unix, vote,
     open-source, django, python, git, github{% endblock %}
 
-{% block description %}A collection of practical and well-explained Bash one-liners and shell script tips, tricks,
-    snippets for GNU Linux, UNIX or BSD systems. Post your clever one-liners, search, login using SSO or Open ID.
-    Open-source project, using Django, Python, jQuery, Git, GitHub, HTML5, Bootstrap from Twitter.{% endblock %}
+{% block description %}
+Find the Bash one-liners, snippets, tips and tricks you need to automate your tasks, troubleshoot problems, and get more done.
+Our one-liners and snippets are well-written, easy to understand,
+and come with detailed explanations that make it easy to learn how they work.
+Whether you're a beginner or an experienced user, you'll find something useful on our website.
+Our snippets are written by experts who understand the Bash shell inside and out.
+We take the time to explain every line of code, so you can be sure you're using the snippets correctly.
+Whether you're looking for snippets to automate system administration tasks, file management tasks, networking tasks,
+or programming tasks, we have what you need.
+We're constantly adding new one-liners and snippets, so be sure to check back often.
+Visit our website today and start using our high-quality Bash one-liners to make your life easier!
+You can login with common social logins such as Google and GitHub and share your wisdom with a community of avid Bash enthusiasts.
+This is an open-source project, built with love, Django, Python, jQuery, Git, GitHub, HTML5, Bootstrap from Twitter.
+{% endblock %}
 
 {% block content %}
 
 Welcome to bashoneliners.com,
 a growing collection of practical and well-explained Bash tips and tricks.
-We are committed to review every contributed one-liner to ensure its high quality,
-practical usefulness, and a solid explanation of how it works.
-We want to document one-liners for frequent (non-trivial) tasks executed in the shell,
-written in the best possible way, following good practices known in the industry.
+We review and improve every contributed one-liner to ensure it is of high quality:
+useful, easy to read, follows best practices, with clear, detailed, accurate explanation.
+These one-liners should help you automate tasks, troubleshoot problems, whether it be in system administration,
+file management, networking or programming.
 
 To get the latest Bash one-liners,
 follow <a href="https://twitter.com/bashoneliners">@bashoneliners</a> on Twitter.
