--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -33,14 +33,15 @@ This is an open-source project, built with love, Django, Python, jQuery, Git, Gi
 {% block content %}
 
 Welcome to bashoneliners.com,
-a growing collection of practical and well-explained Bash tips and tricks.
-We review and improve every contributed one-liner to ensure it is of high quality:
+a growing collection of practical and well-explained Bash one-liners, snippets, tips and tricks.
+We review and improve every contributed one-liner to make sure it is of high quality:
 useful, easy to read, follows best practices, with clear, detailed, accurate explanation.
 These one-liners should help you automate tasks, troubleshoot problems, whether it be in system administration,
 file management, networking or programming.
 
 To get the latest Bash one-liners,
-follow <a href="https://twitter.com/bashoneliners">@bashoneliners</a> on Twitter.
+follow <a href="https://twitter.com/bashoneliners">@bashoneliners</a> on Twitter
+or using the <a href="{% url 'feeds' %}">feeds</a>.
 
 If you find any problems,
 <a href="https://github.com/janosgyerik/bashoneliners/issues">please report on GitHub Issues</a>.
