--- a/oneliners/templates/oneliners/pages/oneliner_edit.html
+++ b/oneliners/templates/oneliners/pages/oneliner_edit.html
@@ -23,18 +23,8 @@
 
     {% include 'oneliners/elements/please_login.html' %}
 
-    <ul>
-        <li>Before you post, please do a quick search to check if a similar one-liner already exists. If it does, and
-            you think your version is better, you can post it as an <em>alternative</em> one-liner, and the two will be
-            linked together.
-        </li>
-        <li>Please post only non-trivial, practical one-liners that are actually useful for something in real life, and
-            in not too limited situations. Pure awesome wicked-cool one-liners are OK too.
-        </li>
-        <li>The <strong>Explanation</strong> is very important. The purpose of this site is to teach, not to show off.
-            Please write nicely, explain clearly, as if teaching a trick to a friend.
-        </li>
-    </ul>
+    <p>Post a Bash one-liner that is useful and interesting, written in a way that follows best practices,
+        with a clear, detailed, and accurate explanation.</p>
 
     {% include 'oneliners/elements/oneliner_edit_form.html' %}
 
