Drop unused sourcecode page

--- a/oneliners/templates/internal_error.html
+++ b/oneliners/templates/internal_error.html
@@ -38,10 +38,7 @@
             <a href="http://www.dreamhost.com/donate.cgi?id=15533">this page</a>.
             Money donated here can only be used to pay for our hosting bills,
             such as the regular bills and upgrades to improved services.
-            We cannot withdraw this money in cash and party it away.
-            Another way to help us is by <a href="{% url 'sourcecode' %}">joining the project</a> and
-            make it hugely popular and profitable together
-            so that we don't need to worry about petty hosting bills...</p>
+            We cannot withdraw this money in cash and party it away.</p>
 
         <p>If you need more info or explanation,
             you can get in touch with us at
